# cliargs

./: CMakeLists.txt  README.md  README_ch.md  README_en.md  release.md
cmake/: cliargs-config.cmake.in  cliargs.cmake  cliargs.sh
examples/: enums.cpp  example.cpp  git.cpp  nesting.cpp  simple.cpp  simple_sensitive.cpp  struct_parse_by_format.cpp  struct_parse_by_parser.cpp  tuple.cpp
include/: CMakeLists.txt  cliargs.hpp
tests/: test_10_positional.cpp  test_11_optional.cpp  test_12_stop_at_eof.cpp  test_1_bool.cpp  test_2_scalar_numeric.cpp  test_3_scalar_string.cpp  test_4_vector.cpp  test_5_map_scalar.cpp  test_6_tuple.cpp  test_7_struct_parser.cpp  test_8_matrix.cpp  test_9_map_vector.cpp  test_helper.hpp
